--- a/src/ui/staff/position/edit_position.fxml
+++ b/src/ui/staff/position/edit_position.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.add_staffController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.position.edit_positionController">
    <children>
       <Text layoutX="216.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT POSITION">
          <font>
@@ -17,15 +14,15 @@
       </Text>
       <ImageView fitHeight="87.0" fitWidth="101.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Images/logo.jpeg" />
+            <Image url="@../../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField fx:id="firstName" layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="470.0" promptText="Position Name">
+      <TextField fx:id="positionName" layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="470.0" promptText="Position Name">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <Button fx:id="addStaff" layoutX="372.0" layoutY="357.0" mnemonicParsing="false" onAction="#clickAddStaff" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
+      <Button fx:id="done" layoutX="372.0" layoutY="357.0" mnemonicParsing="false" onAction="#clickDone" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
