--- a/src/ui/staff/position/position.fxml
+++ b/src/ui/staff/position/position.fxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.staffController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.position.positionController">
    <top>
       <AnchorPane prefHeight="115.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="97.0" fitWidth="106.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Images/logo.jpeg" />
+                  <Image url="@../../Images/logo.jpeg" />
                </image>
             </ImageView>
             <Text fill="#5b3815" layoutX="103.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DASHBOARD">
@@ -37,7 +31,7 @@
                <children>
                   <ImageView fitHeight="81.0" fitWidth="77.0" layoutX="61.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/avatar.png" />
+                        <Image url="@../../Images/avatar.png" />
                      </image>
                   </ImageView>
                   <Text fill="WHITE" layoutX="55.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin Panel">
@@ -59,7 +53,7 @@
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/sales.png" />
+                        <Image url="@../../Images/sales.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -71,7 +65,7 @@
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/staff.png" />
+                        <Image url="@../../Images/staff.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -83,7 +77,7 @@
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/inventory.png" />
+                        <Image url="@../../Images/inventory.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -95,7 +89,7 @@
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/history.png" />
+                        <Image url="@../../Images/history.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -107,7 +101,7 @@
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/finance.png" />
+                        <Image url="@../../Images/finance.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -119,7 +113,7 @@
                <graphic>
                   <ImageView accessibleRole="BUTTON" fitHeight="41.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../Images/logistics.png" />
+                        <Image url="@../../Images/logistics.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -137,11 +131,11 @@
             </Text>
             <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: white;">
               <columns>
-                <TableColumn fx:id="staffID" prefWidth="300.0" text="ID">
+                <TableColumn fx:id="id" prefWidth="300.0" text="ID">
                    <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
                 </TableColumn>
-                <TableColumn fx:id="firstName" prefWidth="700.0" text="Position Name">
-                   <cellValueFactory><PropertyValueFactory property="firstName" /></cellValueFactory>
+                <TableColumn fx:id="positionName" prefWidth="700.0" text="Position Name">
+                   <cellValueFactory><PropertyValueFactory property="positionName" /></cellValueFactory>
                 </TableColumn>
               </columns>
             </TableView>
@@ -150,7 +144,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="addStaff" layoutX="49.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickAddStaff" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD POSITION">
+            <Button fx:id="addPosition" layoutX="49.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickAddPosition" prefHeight="39.0" prefWidth="166.0" style="-fx-background-color: #FFFFFF;" text="ADD POSITION">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
