--- a/src/ui/authentication/login_page.fxml
+++ b/src/ui/authentication/login_page.fxml
@@ -29,12 +29,12 @@
                   <Font name="Segoe UI Bold" size="40.0" />
                </font>
             </Text>
-            <TextField layoutX="480.0" layoutY="239.0" prefWidth="315.0" promptText="Staff ID">
+            <TextField fx:id="idField" layoutX="480.0" layoutY="239.0" prefWidth="315.0" promptText="Staff ID">
                <font>
                   <Font size="20.0" />
                </font>
             </TextField>
-            <PasswordField layoutX="480.0" layoutY="307.0" prefWidth="315.0" promptText="Password">
+            <PasswordField fx:id="passwordField" layoutX="480.0" layoutY="307.0" prefWidth="315.0" promptText="Password">
                <font>
                   <Font size="20.0" />
                </font>
